--- a/style.css
+++ b/style.css
@@ -630,22 +630,11 @@ input:focus {
 }
 
 .promo_desc {
-    width: 144px;
+    display: inline-block;
+    vertical-align: top;
     position: absolute;
     top: 126px;
     right: 0;
-}
-
-.promo_desc:after {
-    content: "";
-    border-bottom: 147px solid #ffffff;
-    border-left: 17px solid transparent;
-    border-right: 17px solid transparent;
-    height: 0;
-    position: absolute;
-    top: 4px;
-    left: -21px;
-    width: 150px;
 }
 
 .promo_desc .inner {
@@ -655,8 +644,29 @@ input:focus {
     z-index: 2;
 }
 
-.promo_desc .inner:after {
+.promo_desc:before {
     content: "";
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    padding: 0 2px 2px 2px;
+    position: absolute;
+    top: 2px;
+    left: -4px;
+}
+
+.promo_desc .white_tr {
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 0 147px 17px;
+    position: absolute;
+    top: 4px;
+    left: -21px;
+    border-color: transparent transparent #ffffff transparent;
+}
+
+.promo_desc .blue-tr {
     width: 0;
     height: 0;
     border-style: solid;
